<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/post_title_label"
        style="?android:listSeparatorTextViewStyle"/>

    <EditText
        android:id="@+id/post_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/post_title_hint"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/post_details_label"
        style="?android:listSeparatorTextViewStyle"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/post_details"
        android:hint="@string/post_details_hint"
        android:scrollbarAlwaysDrawVerticalTrack="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/publish_button"
        android:layout_gravity="center_horizontal"
        android:text="Submit"
        android:elevation="0dp" />
</LinearLayout>

